--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,3 +34,9 @@ font-family: Arial, Helvetica, sans-serif;
     border-radius: 4px;
     max-width: 500px;
 }
+
+.tabs {
+    display: flex;
+    gap: 2em;
+    cursor: pointer;
+}
